--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,15 @@
 [build]
 builder = "nixpacks"
-buildCommand = "pip install -r requirements.txt"
+buildCommand = "apt-get update && apt-get install -y libreoffice && pip install -r requirements.txt"
 
 [deploy]
 startCommand = "gunicorn app:app"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
-restartPolicyMaxRetries = 10 
+restartPolicyMaxRetries = 10
+
+[deploy.env]
+PYTHONUNBUFFERED = "1"
+FLASK_ENV = "production"
+FLASK_APP = "app.py" 
