--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ python-docx==0.8.11
 gunicorn==20.1.0
 python-magic==0.4.24
 Werkzeug==2.0.1
-libreoffice-headless==7.5.0 
+python-magic-bin==0.4.14; sys_platform == 'win32' 
