Improve health check implementation and reliability

--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ dockerfilePath = "./Dockerfile"
 
 [deploy]
 startCommand = "gunicorn --bind 0.0.0.0:$PORT --workers 1 --timeout 120 --preload app:app"
-healthcheckPath = "/"
+healthcheckPath = "/health"
 healthcheckTimeout = 100
 startupTimeout = 180
 restartPolicyType = "on_failure"
