--- a/railway.toml
+++ b/railway.toml
@@ -3,8 +3,8 @@ builder = "DOCKERFILE"
 dockerfilePath = "./Dockerfile"
 
 [deploy]
-startCommand = "gunicorn --bind 0.0.0.0:$PORT --workers 1 --timeout 300 --preload app:app"
-healthcheckPath = "/health"
+startCommand = "gunicorn --bind 0.0.0.0:$PORT --workers 1 --timeout 300 --preload --access-logfile - app:app"
+healthcheckPath = "/"
 healthcheckTimeout = 300
 startupTimeout = 300
 restartPolicyType = "on_failure"
